feat: modify / to not send raw error
/ act as a healthcheck endpoint, and we don't really want to send the
raw error traces to the user/service calling us. Change it to provide a
simple status payload to the caller, whilst still logging the error traces.
